[package]
name = "srun"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[features]
default = []
tls = ["rustls", "rustls-native-certs"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
hmac = "0.12.1"
httparse = "1.10.1"
if-addrs = "0.15.0"
md-5 = "0.10.6"
rustls = { version = "0.21", default-features = false, features = [
    "dangerous_configuration",
    "tls12",
], optional = true }
rustls-native-certs = { version = "0.6", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha-1 = "0.10.1"
socket2 = "0.6.2"
url = { version = "2.5.8", default-features = false }
